-Fixed the GetProductsByAllFilters Query -Restyled the home component -Restyled the products list component + added sorting / filtering buttons